--- a/main.html
+++ b/main.html
@@ -25,5 +25,10 @@
         <small>author : M A Monayem islam</small>
         <p class="para">I am trying to write something about tista tour . tista tour is most gretest tour in this time and i will like in this tour and iI am trying to write something about tista tour . tista tour is most gretest tour in this time and i will like in this tour and iI am trying to write something about tista tour . tista tour is most gretest tour in this time and i will like in this tour and iI am trying to write something about tista tour . tista tour is most gretest tour in this time and i will like in this tour and iI am trying to write something about tista tour . tista tour is most gretest tour in this time and i will like in this tour and i </p>
     </div>
+    <div class="blog">
+        <h3 class="head-title">Coxbazar Tour</h3>
+        <small><i>Author</i> :MONAYEM ISLAM</small>
+        <p class="para">this are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to athis are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to athis are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to athis are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to a</p>
+    </div>
 </body>
 </html>
