--- a/main.html
+++ b/main.html
@@ -30,5 +30,10 @@
         <small><i>Author</i> :MONAYEM ISLAM</small>
         <p class="para">this are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to athis are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to athis are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to athis are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to a</p>
     </div>
+    <div class="blog">
+        <h3 class="head-title">Coxbazar Tour</h3>
+        <small><i>Author</i> :MONAYEM ISLAM</small>
+        <p class="para">this are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to athis are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to athis are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to athis are the are coxbaxer tour i trying somethinks about in this funny moment and a will be abel this tryi about this one and accoriding to a</p>
+    </div>
 </body>
 </html>
